# frequenz-repo-config-python

./: .cookiecutter-replay.json  .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements-nox.txt  versions.json
.github/: RELEASE_NOTES.template.md  dependabot.yml  keylabeler.yml  labeler.yml
cookiecutter/: cookiecutter.json  local_extensions.py  variable-reference.md
cookiecutter/{{cookiecutter.github_repo_name}}/: .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  mkdocs.yml  noxfile.py  pyproject.toml
cookiecutter/{{cookiecutter.github_repo_name}}/.github/: RELEASE_NOTES.template.md  dependabot.yml  keylabeler.yml  labeler.yml
cookiecutter/{{cookiecutter.github_repo_name}}/.github/ISSUE_TEMPLATE/: bug.yml  config.yml
cookiecutter/{{cookiecutter.github_repo_name}}/.github/containers/nox-cross-arch/: arm64-ubuntu-20.04-python-3.11.Dockerfile  entrypoint.bash
cookiecutter/{{cookiecutter.github_repo_name}}/.github/containers/test-installation/: Dockerfile
cookiecutter/{{cookiecutter.github_repo_name}}/.github/workflows/: ci.yaml  dco-merge-queue.yml  labeler.yml  release-notes-check.yml
cookiecutter/{{cookiecutter.github_repo_name}}/docs/: SUMMARY.md  mkdocstrings_autoapi.py
cookiecutter/{{cookiecutter.github_repo_name}}/docs/_overrides/: main.html
cookiecutter/{{cookiecutter.github_repo_name}}/docs/_scripts/: macros.py  mkdocstrings_autoapi.py
cookiecutter/{{cookiecutter.github_repo_name}}/proto/frequenz/api/{{cookiecutter.name | as_identifier}}/: {{cookiecutter.name | as_identifier}}.proto
cookiecutter/{{cookiecutter.github_repo_name}}/proto/frequenz/api/{{cookiecutter.name}}/: {{cookiecutter.name}}.proto
cookiecutter/{{cookiecutter.github_repo_name}}/src/: conftest.py
cookiecutter/{{cookiecutter.github_repo_name}}/src/frequenz/{{cookiecutter.type}}/{{cookiecutter.name | as_identifier}}/: __init__.py  conftest.py
cookiecutter/{{cookiecutter.github_repo_name}}/src/frequenz/{{cookiecutter.type}}/{{cookiecutter.name}}/: __init__.py
cookiecutter/{{cookiecutter.github_repo_name}}/tests/: test_{{cookiecutter.name | as_identifier}}.py  test_{{cookiecutter.name}}.py
docs/: index.md
github-rulesets/: Disable creation of non-release tags.json  Disable creation of other branches.json  Disallow removal and force-pushes of gh-pages.json  Protect released tags.json  Protect version branches.json
latest/: 404.html  index.html
latest-dev/: 404.html  index.html
latest-pre/: index.html
next/: 404.html  index.html  objects.inv
tests/: __init__.py  test_core.py  test_pyproject.py  test_version.py  utils.py
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/: .cookiecutter-replay.json  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  mkdocs.yml  noxfile.py  pyproject.toml
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/.github/: RELEASE_NOTES.template.md  dependabot.yml  labeler.yml
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/.github/ISSUE_TEMPLATE/: config.yml
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/.github/containers/nox-cross-arch/: entrypoint.bash
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/.github/containers/test-installation/: Dockerfile
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/.github/workflows/: ci.yaml
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/src/frequenz/actor/test/: __init__.py
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/tests/: test_test.py
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/: .cookiecutter-replay.json  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  mkdocs.yml  noxfile.py  pyproject.toml
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/.github/: RELEASE_NOTES.template.md  dependabot.yml  labeler.yml
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/.github/ISSUE_TEMPLATE/: bug.yml  config.yml
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/.github/containers/nox-cross-arch/: arm64-ubuntu-20.04-python-3.11.Dockerfile
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/.github/workflows/: ci.yaml  release-notes-check.yml
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/docs/_scripts/: mkdocstrings_autoapi.py
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/proto/frequenz/api/test/: test.proto
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/py/frequenz/api/test/: __init__.py
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/pytests/: test_test.py
tests_golden/integration/test_cookiecutter_generation/lib/frequenz-test-python/: .cookiecutter-replay.json  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  mkdocs.yml  noxfile.py  pyproject.toml
tests_golden/integration/test_cookiecutter_generation/lib/frequenz-test-python/.github/: RELEASE_NOTES.template.md  dependabot.yml  labeler.yml
tests_golden/integration/test_cookiecutter_generation/lib/frequenz-test-python/.github/ISSUE_TEMPLATE/: config.yml
tests_golden/integration/test_cookiecutter_generation/lib/frequenz-test-python/.github/workflows/: ci.yaml
tests_golden/integration/test_cookiecutter_generation/lib/frequenz-test-python/docs/_scripts/: macros.py
tests_golden/integration/test_cookiecutter_generation/lib/frequenz-test-python/tests/: test_test.py
v0-dev/: 404.html  index.html
v0-pre/: 404.html
v0.10-dev/: index.html
v0.3/: 404.html
v0.4/: 404.html  index.html  objects.inv
v0.5/: 404.html  index.html
v0.6/: 404.html  index.html  objects.inv
v0.7-dev/: 404.html  index.html  objects.inv
(+446 files in other folders)
