[build-system]
requires = ["setuptools == 67.6.0", "setuptools_scm[toml] == 7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frequenz-repo-config"
description = "Frequenz repository setup tools and common configuration"
readme = "README.md"
license = { text = "MIT" }
keywords = [
  "frequenz",
  "package",
  "project",
  "config",
  "tool",
  "repository",
  "setuptools",
  "nox",
  "grpc",
  "protobuf",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">= 3.11, < 4"
dependencies = ["nox >= 2022.11.21"]
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[project.entry-points."distutils.commands"]
compile_proto = "frequenz.repo.config.setuptools.grpc_tools:CompileProto"

[project.optional-dependencies]
actor = []
api = [
  "grpcio-tools >= 1.47.0, < 2",
  "mypy-protobuf >= 3.0.0, < 4",
  "setuptools >= 67.6.0, < 68",
]
app = []
lib = []
dev-docs-gen = [
  "mike == 1.1.2",
  "mkdocs-gen-files == 0.4.0",
  "mkdocs-literate-nav == 0.4.0",
  "mkdocs-material == 9.1.4",
  "mkdocs-section-index == 0.3.5",
  "mkdocstrings[python] == 0.20.0",
]
dev-docstrings = ["pydocstyle == 6.3.0", "darglint == 1.8.1"]
dev-formatting = ["black == 23.3.0", "isort == 5.12.0"]
dev-mypy = [
  "mypy == 1.1.1",
  "types-setuptools >= 67.6.0, < 68", # Should match the global dependency
  # For checking the docs/ script, and tests
  "frequenz-repo-config[docs-gen,pytest]",
]
dev-pylint = [
  "pylint == 2.17.1",
  "pylint-google-style-guide-imports-enforcing == 1.3.0",
  # For checking the docs/ script, and tests
  "frequenz-repo-config[docs-gen,pytest]",
]
dev-pytest = ["pytest == 7.2.2"]
dev = [
  "frequenz-repo-config[dev-docs-gen,dev-docstrings,dev-formatting,dev-pytest,dev-mypy,dev-pylint]",
]

[project.urls]
Changelog = "https://github.com/frequenz-floss/frequenz-repo-config-python/releases"
Repository = "https://github.com/frequenz-floss/frequenz-repo-config-python"
Issues = "https://github.com/frequenz-floss/frequenz-repo-config-python/issues"
Support = "https://github.com/frequenz-floss/frequenz-repo-config-python/discussions/categories/support"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  # disabled because it conflicts with isort
  "wrong-import-order",
  "ungrouped-imports",
]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]
